Fix homepage being too long

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,10 @@
-/* img {
-    width: 100%;
-    height: 800px;
-    margin: 0px 0px 40px 0px;
-} */
+.main-image-wrap {
+    max-height: 600px;
+    overflow: hidden;
+}
 
 .main-image {
     width: 100%;
-    /* max-width: 100%; */
-    /* overflow: hidden; */
 }
 
 .main-image-mobile {
