--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,7 @@ h3 {
 h4 {
   font-family: Arial;
 }
+
+ul {
+  font-family: Arial;
+}
